@@ -1,3 +1,9 @@
+2013-11-19  Joseph Myers  <joseph@codesourcery.com>
+
+	* varasm.c (align_variable): Give error instead of warning for
+	unsupported alignment.
+	(assemble_noswitch_variable): Likewise.
+
 2013-11-19  Basile Starynkevitch  <basile@starynkevitch.net>
 
         * plugin.def (PLUGIN_INCLUDE_FILE): New event, invoked in 
